apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: storage
              mountPath: /srv
            - name: filebrowser-db
              mountPath: /database
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: rom-storage
        - name: filebrowser-db
          hostPath:
            path: /mnt/das-storage/filebrowser/db
            type: DirectoryOrCreate
