apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  namespace: filebrowser
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - filebrowser
  rules:
    - host: filebrowser
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
